[gd_scene load_steps=4 format=3 uid="uid://b6x8v0j6y5n3q"]

[ext_resource type="Script" path="res://scripts/game/main_game.gd" id="1_2k4m3"]
[ext_resource type="Script" path="res://scripts/systems/camera_controller.gd" id="1_2u4vx"]
[ext_resource type="Script" path="res://scripts/core/time_manager.gd" id="2_l4n5p"]
[ext_resource type="Script" path="res://scripts/core/input_manager.gd" id="3_m5o6q"]

[sub_resource type="Environment" id="Environment_1"]
ambient_light_color = Color(0.2, 0.2, 0.2, 1.0)
ambient_light_energy = 0.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1"]
albedo_color = Color(0.2, 0.5, 0.2, 1.0)

[node name="MainGame" type="Node3D"]
script = ExtResource("1_2k4m3")

[node name="CameraController" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 10, 10, 10)
script = ExtResource("1_2u4vx")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 10, 0)
shadow_enabled = true

[node name="Ground" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
size = Vector3(100, 1, 100)
material = SubResource("StandardMaterial3D_1")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="GameInfo" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Game Info"
horizontal_alignment = 1

[node name="TimeInfo" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Year: 0 | Age: Stone Age"
horizontal_alignment = 1

[node name="DebugTimer" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Real Time: 0.0s"
horizontal_alignment = 1

[node name="ResourceInfo" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Resources:"
horizontal_alignment = 1

[node name="ResourceList" type="VBoxContainer" parent="UI/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Controls" type="HBoxContainer" parent="UI/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="StartButton" type="Button" parent="UI/VBoxContainer/Controls"]
layout_mode = 2
text = "Start Game"

[node name="PauseButton" type="Button" parent="UI/VBoxContainer/Controls"]
layout_mode = 2
text = "Pause"

[node name="ResumeButton" type="Button" parent="UI/VBoxContainer/Controls"]
layout_mode = 2
text = "Resume"

[node name="SpeedControls" type="Control" parent="UI"]
layout_mode = 1
anchors_preset = 2
anchor_left = 0.0
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -80.0
offset_right = 160.0
offset_bottom = -20.0
grow_horizontal = 1
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/SpeedControls"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5

[node name="SpeedLabel" type="Label" parent="UI/SpeedControls/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Speed:"

[node name="HBoxContainer" type="HBoxContainer" parent="UI/SpeedControls/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5
alignment = 1

[node name="Speed1xButton" type="Button" parent="UI/SpeedControls/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "1x"
toggle_mode = true

[node name="Speed2xButton" type="Button" parent="UI/SpeedControls/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "2x"
toggle_mode = true

[node name="Speed5xButton" type="Button" parent="UI/SpeedControls/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "5x"
toggle_mode = true

[node name="TimeManager" type="Node" parent="."]
script = ExtResource("2_l4n5p")

[node name="InputManager" type="Node" parent="."]
script = ExtResource("3_m5o6q")
